# TFG_Padel_Recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
anexos/: diccionario-datos.tex  repositorio-ejecucion.tex
config/: config.toml
data/metadata/: matches_metadata.csv
docs/: data_dictionary.md
notebooks/: mi_eda.html  mi_eda.qmd
notebooks/exploration/: mi_eda.html  mi_eda.qmd  pruebaquarto.qmd  pruebas.ipynb  resumen_juegos.xlsx  resumen_partido.xlsx
scripts/: generate_classical_recommendations.py  generate_figures.py  generate_match_dashboards.py  generate_recommendations.py  generate_recommendations_report.py  generate_tables.py  run_pipeline.py  validate_data.py
scripts/legacy/: collapse_events.py  ingest_raw.py  pipeline_full.py  pipeline_golpes.py  pipeline_juegos.py  recomendador.py  test_imports.py
scripts/legacy/notes/: informe_pareds.txt  quality_report_legacy.json
scripts/legacy/old_src/common/: logging_setup.py
scripts/legacy/old_src/data/: clean_data.py  event_collapse.py  load_data.py  normalize_columns.py  saque_utils.py  schemas.py  score_utils.py  validate_raw.py
src/tfg_padel/: __init__.py  classical_recommender.py  cleaning.py  clustering.py  config.py  features.py  io.py  match_dashboards.py  metrics.py  pipeline.py  recommendations_reporting.py  recommender.py  reporting.py  validation.py
tables/resultados/: player_recommendation_examples.tex
